# tinystl

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
doc/: directory_structure.md  stl_implementation_notes.md
script/: format.py
source/: CMakeLists.txt
source/tinystl/: array.h  memory.h  type_traits.h
source/tinystl/container/: array.h  deque.h  split_buffer.h  vector.h
source/tinystl/experimental/: type_traits.h
source/tinystl/iterator/: back_insert_iterator.h  front_insert_iterator.h  insert_iterator.h  iterator.h  iterator_tag.h  iterator_traits.h  reverse_iterator.h  segmented_iterator.h
source/tinystl/memory/: addressof.h  allocate_at_least.h  allocator.h  allocator_traits.h  construct.h  destroy.h  pointer_traits.h  swap_allocator.h  temp_value.h  to_address.h
source/tinystl/type_traits/: add_reference.h  conditional.h  enable_if.h  integral_constant.h  interal_constant.h  is_arithmetic.h  is_array.h  is_class.h  is_const.h  is_constructible.h  is_convertible.h  is_empty.h  is_enum.h  is_floating_point.h  is_function.h  is_integral.h  is_lvalue_reference.h  is_member_pointer.h  is_null_pointer.h  is_object.h  is_pointer.h  is_reference.h  is_renferenceable.h  is_rvalue_reference.h  is_same.h  is_scalar.h  is_union.h  is_void.h  make_unsigned.h  remove_cv.h  void_t.h
test/: CMakeLists.txt  array.cpp  example.cpp
test/container/: array.cpp  split_buffer.cpp  vector.cpp
test/memory/: allocator.cpp
test/type_traits/: integral_constant.cpp  interal_constant.cpp  is_same.cpp  is_void.cpp  remove_cv.cpp
(+30 files in other folders)
